virtualservice/orders-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-vs
  namespace: microservices
spec:
  hosts:
    - "maven-micro.com"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: order-service
            port:
              number: 3003
