virtualservice/products-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-service-vs
  namespace: microservices
spec:
  hosts:
    - "maven-micro.com"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /products
      route:
        - destination:
            host: product-service
            port:
              number: 3004
