virtualservice/profiles-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profile-service-vs
  namespace: microservices
spec:
  hosts:
    - "maven-micro.com"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /profiles
      route:
        - destination:
            host: profile-service
            port:
              number: 3002
