virtualservice/users-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-vs
  namespace: microservices
spec:
  hosts:
    - "maven-micro.com"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /users
      route:
        - destination:
            host: user-service
            port:
              number: 3001
